Fix scrolling to end of day on mobiles with a screen keyboard on screen

--- a/style.css
+++ b/style.css
@@ -293,10 +293,10 @@ html {
 }
 
 #dayView {
-  /* position: relative; */ /* Needs to be relative in order for the add-button to have an absolute position with respect to the viewport and not the total page https://css-tricks.com/absolute-relative-fixed-positioining-how-do-they-differ/ */ */
+  /* position: relative; */ /* Needs to be relative in order for the add-button to have an absolute position with respect to the viewport and not the total page https://css-tricks.com/absolute-relative-fixed-positioining-how-do-they-differ/ */
   /* transition: all 0.4s; */
 
-  display: grid;
+  /* display: grid; */
   grid-template-columns: auto;
   grid-template-rows: auto auto auto;
   grid-gap: .3rem;
@@ -1122,7 +1122,20 @@ button[id*='memory'] {
     background-color: black;
   }
 
-  /* #container {
-    height: 500px;
-  } */
+  #blankBottom {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 399px) {
+  #blankBottom {
+    height: 400px;
+    grid-area: taskFooter;
+  }
+
+  #spacerText {
+    font-weight: normal;
+    position: relative;
+    top: 50%;
+  }
 }
